--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,300;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header
+    class="header">
+        <nav>
+            <section class="nav-bar-area">
+                <div class="nav-bar-title">
+                    <h2>Ma<span>r</span>y</h2>
+                </div>
+                <div class="nav-bar-list" >
+                    <ul>
+                        <li>
+                            <a href="#">portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <button class="btn-primary">Hire Me</button>
+                        </li>
+                    </ul>
+                </div>
+
+            </section>
+        </nav>
+        <section class="marry-details ">
+            <div class="marry-info">
+                <h3 class="marry-title">Hi, I  am</h3>
+                <h1 class="marry-name">Mary Hardy</h1>
+                <p class="marry-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <div class="marry-img">
+                <img src="./images/hardy.png" alt="">
+            </div>
+        </section>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
