header area responsive

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 <h3 class="marry-title">Hi, I  am</h3>
                 <h1 class="marry-name">Mary Hardy</h1>
                 <p class="marry-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="another">
                 <button class="btn-primary">Download CV <i class="fa-solid fa-download"></i></button>
                 <button class="btn-primary">Contact <i class="fa-solid fa-phone"></i></button>
+            </div>
             </div>
             <div class="marry-img">
                 <img src="./images/hardy.png" alt="">
@@ -46,7 +48,7 @@
         </section>
 
     </header>
-    <main>
+    <main class="hide">
         <!-- about section -->
         <section class="about">
             <h3 class="section-title">About Me</h3>
@@ -157,7 +159,7 @@
         
 
     </main>
-    <footer class="fotter-area">
+    <footer class="fotter-area hide">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-discription">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
