download cv resposive

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </section>
         <!-- ressueme section -->
-        <section>
+        <section class="hide">
             <h3 class="section-title">A summary of My Resume </h3>
             <div class="resumee-container">
                 <div class="resumee-column">
