--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header
-    class="header container hide">
+    class="header container">
         <nav>
             <section class="nav-bar-area ">
                 <div class="nav-bar-title">
@@ -50,7 +50,7 @@
     </header>
     <main>
         <!-- about section -->
-        <section class="about hide  ">
+        <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="about-info-container">
@@ -74,7 +74,7 @@
         </section>
 
         <!-- what i do section -->
-        <section class="hide">
+        <section>
             <h3 class="section-title">What i do </h3>
             <p id="what-i-do" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skills-container">
@@ -101,7 +101,7 @@
             </div>
         </section>
         <!-- ressueme section -->
-        <section class="hide">
+        <section>
             <h3 class="section-title">A summary of My Resume </h3>
             <div class="resumee-container">
                 <div class="resumee-column">
@@ -153,13 +153,13 @@
                 </div>
             </div>
         </section>
-        <div class="download-cv hide ">
+        <div class="download-cv">
             <button class="btn-primary another">Download CV <i class="fa-solid fa-download"></i></button>
         </div>
         
 
     </main>
-    <footer class="fotter-area hide">
+    <footer class="fotter-area">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-discription">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
